--- a/package.json
+++ b/package.json
@@ -12,12 +12,22 @@
     "node": "14.16.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.1033.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "fs": "^0.0.1-security",
+    "memorystore": "^1.6.6",
     "mongo": "^0.1.0",
     "mongodb": "^4.1.4",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "mongoose-encryption": "^2.1.2",
+    "multer": "^1.4.3",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
